# Deploying-an-Ensemble-Model-with-BentoML

./: .gitignore  README.md  pyproject.toml
analysis/: stacked_clf.joblib
analysis/assets/: corr_chart
analysis/notebook/: corr_chart  garment_analysis.ipynb
deployment/: README.md  bentofile.yaml  pyproject.toml  sample_array.txt  sample_dict.txt  service.py
